# picklebot.py

./: .gitignore  README.md  pyproject.toml
picklebot/: __init__.py  core.py
