[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "picklebot.py"
version = "0.1.0"
description = "A modern async wrapper for the Picklechat API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "pydantic"
]